fix: adjust bottom position of ScrollDownButton for improved visibility

--- a/src/components/ScrollDownButton/ScrollDownButton.module.scss
+++ b/src/components/ScrollDownButton/ScrollDownButton.module.scss
@@ -2,7 +2,7 @@
 
 .button {
   position: absolute;
-  bottom: 5rem;
+  bottom: 7.5rem;
   left: 50%;
   transform: translateX(-50%);
   background: none;
